tests/cases/errors/parser/stmt_let3.vnm
fn main() {
  let x = 0;
  let y = "Hello, world!";
  if (x != y) {
    let 1 = 2;
    print 1;
  }
  return 0;
}

main();
